--- a/Quiz/src/styles/HomePage.css
+++ b/Quiz/src/styles/HomePage.css
@@ -1,11 +1,53 @@
-.homepage-container {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  p {
-    font-size: 1.5em;
-    color: #333;
-    font-weight: 500;
-  }
-  
+body {
+	margin: 0;
+	padding: 0;
+	font-family: "Poppins", sans-serif;
+	background-color: #0a0036;
+	color: #fff;
+	line-height: 1.6;
+	min-height: 100vh;
+}
+
+.homepage {
+	position: relative;
+	/* background-image: url("/src/assets/background-image.png"); */
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	overflow: hidden;
+}
+
+h1 {
+	font-size: 5em;
+	margin: 20px 0;
+	line-height: 1.2;
+}
+
+p {
+	font-size: 1.1em;
+	margin: 20px 0;
+}
+
+.quiz-button {
+	background-color: #dd1c1c;
+	color: #ffffff;
+	border: none;
+	padding: 15px 35px;
+	font-size: 1.2em;
+	cursor: pointer;
+	border-radius: 50px;
+	margin-top: 20px;
+	transition: background-color 0.3s ease, transform 0.3s ease,
+		box-shadow 0.3s ease;
+}
+
+.quiz-button:hover {
+	background-color: #dd4747;
+}
