--- a/Quiz/src/styles/HomePage.css
+++ b/Quiz/src/styles/HomePage.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Poppins", sans-serif;
-	background-color: #0a0036;
+	background-color: #121212;
 	color: #fff;
 	line-height: 1.6;
 	min-height: 100vh;
