Toevoegen van data in quizData

--- a/Quiz/src/styles/QuizPage.css
+++ b/Quiz/src/styles/QuizPage.css
@@ -113,3 +113,29 @@ h1 {
   background-color: #ff3333;
   transform: translateY(-2px);
 }
+
+.correct-answer-animation {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(76, 109, 76, 0.8);
+  color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 24px;
+  z-index: 1000;
+}
+
+.wrong-answer-animation {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(102, 40, 40, 0.8);
+  color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 24px;
+  z-index: 1000;
+}
